--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,4 +6,9 @@
 // Components
 
 @import './components/global.scss';
+@import './components/body-background';
 @import './components/card.scss';
+
+// Fonts
+
+@import './components/fonts.scss';
