--- a/src/styles/components/body-background.scss
+++ b/src/styles/components/body-background.scss
@@ -1,6 +1,10 @@
+/*__________________PAGE BACKGROUND__________________*/
+
 .body-background{
   background: url("../../img/union-background_pt1.svg");
-  padding: 160px;
+  background-size: 60%;
+  background-repeat: no-repeat;
+  padding: 50px 160px;
 }
 
 /*work-in-process*/
