--- a/src/styles/components/global.scss
+++ b/src/styles/components/global.scss
@@ -6,9 +6,11 @@
 
 html,
 body {
+  height: 100vh;
   margin: 0;
   padding: 0;
   font-family: "Gilroy", Arial, sans-serif;
 
   /*фонт-фэмили, фонт-сайз*/
 }
+
