--- a/src/styles/components/aside-menu.scss
+++ b/src/styles/components/aside-menu.scss
@@ -37,3 +37,18 @@
   height: 25px;
   margin: 0;
 }
+
+.menu__icon{
+  color: #DFE6F1;
+  font-size: 25px;
+  text-decoration: none;
+  margin: 12px 0;
+}
+
+.act{
+  color:#7F7FD5;
+}
+
+.menu__icon:hover{
+  color:#7F7FD5;
+}
