--- a/src/styles/components/body-background.scss
+++ b/src/styles/components/body-background.scss
@@ -1,10 +1,11 @@
 /*__________________PAGE BACKGROUND__________________*/
 
+
 .body-background{
   background: url("../../img/union-background_pt1.svg");
   background-size: 60%;
   background-repeat: no-repeat;
-  padding: 50px 160px;
+  padding: 5vh 10vw;
 }
 
 /*work-in-process*/
