--- a/src/styles/components/global.scss
+++ b/src/styles/components/global.scss
@@ -14,3 +14,20 @@ body {
   /*фонт-фэмили, фонт-сайз*/
 }
 
+
+h1{
+  margin: 0;
+  font-size: 1.7rem;
+  font-weight: 700;
+  line-height: 36px;
+}
+
+h2{
+  margin: 0;
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+
+span{
+  font-size: 1rem;
+}
