--- a/src/styles/components/page-main.scss
+++ b/src/styles/components/page-main.scss
@@ -2,9 +2,9 @@
 
 .page {
   display: grid;
-  grid-template-columns: 98px 1fr;
-  grid-template-rows: 1fr;
+  grid-template-columns: 98px minmax(341px, 1fr);
+  grid-template-rows: 90vh;
   border: 1px solid #EBEBEB;
   border-radius: 14px;
-  min-height: 100%;
+  //min-height: 100%;
 }
