--- a/src/styles/components/page-main.scss
+++ b/src/styles/components/page-main.scss
@@ -1,10 +1,17 @@
 /*__________________MAIN PAGE MARKUP__________________*/
 
-.page {
-  display: grid;
-  grid-template-columns: 98px minmax(341px, 1fr);
-  grid-template-rows: 90vh;
-  border: 1px solid #EBEBEB;
-  border-radius: 14px;
-  //min-height: 100%;
+@media (min-width: 1024px){
+  .page {
+    display: grid;
+    grid-template-columns: 98px minmax(341px, 1fr);
+    @media (max-width: 1300px) {
+      grid-template-rows: auto;
+    }
+
+    grid-template-rows: 90vh;
+    border: 1px solid #EBEBEB;
+    border-radius: 14px;
+    //min-height: 100%;
+  }
 }
+
