--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -25,25 +25,34 @@
   background-color: #EFF3F9;
   border-radius: 0 14px 14px 0;
   padding: 1.7rem 2rem;
+  @media (max-width: 768px) {
+    padding: 1.2rem;
+  }
+  @media (max-width: 576px){
+    padding: 1rem;
+  }
   position: relative;
 }
 
 
-
-.grid {
-  display: grid;
-  width: 100%;
-  height: 100%;
-  grid-template-rows: auto 2fr 3fr 3fr;
-  grid-row-gap: 1.5rem;
-
+@media (min-width: 992px) {
+  .grid {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-rows: auto 2fr 3fr 3fr;
+    grid-row-gap: 1.5rem;
+  }
   //___________ 1ST ROW CUSTOMIZATION ___________//
-
+}
   .header{
     display: flex;
     justify-content: flex-start;
     align-items: center;
     .header__search{
+      @media (max-width:576px) {
+        display: none;
+      }
       display: block;
       width: 153px;
       height: 32px;
@@ -69,6 +78,9 @@
       .person__name{
         font-weight: 600;
         font-size: 20px;
+        @media (max-width: 576px){
+          font-size: 1rem;
+        }
         line-height: 24px;
       }
       .person__avatar{
@@ -92,14 +104,28 @@
   }
 
   //___________ 1ST ROW CUSTOMIZATION ___________//
-}
 
 
 
-.grid__row{
-  display: grid;
-  grid-row-start: span 1;
-  grid-column-gap: 1.5rem;
+
+@media (min-width: 992px) {
+  .grid__row{
+    display: grid;
+    grid-row-start: span 1;
+    grid-column-gap: 1.5rem;
+  }
+
+  .row-2{
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .row-3{
+    grid-template-columns: 8fr 3fr;
+  }
+
+  .row-4{
+    grid-template-columns: 3fr 2fr;
+  }
 }
 
 .article {
@@ -107,19 +133,17 @@
   background-color: #FDFDFF;
   border: 1px solid #EBEBEB;
   border-radius: 13px;
+  @media (max-width: 992px) {
+    min-height: 148px;
+    margin: 1rem 0;
+  }
+  @media (max-width: 576px) {
+    min-height: 115px;
+    padding: 0.8rem
+  }
 }
 
-.row-2{
-  grid-template-columns: repeat(3, 1fr);
-}
 
-.row-3{
-  grid-template-columns: 8fr 3fr;
-}
-
-.row-4{
-  grid-template-columns: 3fr 2fr;
-}
 
 //___________ 2ND ROW CUSTOMIZATION ___________//
 
@@ -184,20 +208,26 @@
   display: block;
   max-width: 100%;
   max-height: 75%;
-  height: auto;
 }
 
 
 .date-selection{
-  margin-left: 150px;
+  @media (min-width:768px) {
+    margin-left: 150px;
+    font-size: 0.85rem;
+  }
+  margin-left: auto;
   border: none;
   font-family: "Gilroy", Arial, sans-serif;
-  font-size: 0.85rem;
+  font-size: 0.75rem;
   color: #4F4F4F;
 }
 
 .checkbox {
+  @media (min-width: 768px) {
   margin-left: 20px;
+  }
+  margin-left: auto;
   position: relative;
   font-family: "Gilroy", Arial, sans-serif;
   font-size: 12px;
@@ -244,7 +274,10 @@
 }
 
 .checkbox-alt-label {
-  margin-right: 48px;
+  @media (min-width: 768px){
+    margin-right:48px;
+  }
+  margin-left: auto;
   position: relative;
   font-family: "Gilroy", Arial, sans-serif;
   font-size: 12px;
@@ -337,7 +370,7 @@
 
 .gender >img{
   display: block;
-  max-height: 75%;
+  max-width: 90%;
   width: auto;
   height: auto;
 }
@@ -389,12 +422,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  @media (max-width: 768px) {
+    margin-bottom: 0;
+  }
 }
 
 .geo > img{
   display: block;
-  max-width: 95%;
-  height: auto;
+  max-width: 100%;
   align-self: center;
 }
 
@@ -422,16 +457,26 @@
 
 
 
-body > img{
-  display: inline-block;
-  position: absolute;
-  width: 350px;
-  height: auto;
-  right: 0;
-  bottom: 0;
-}
 
 
 //___________ 4TH ROW CUSTOMIZATION ___________//
+body > img {
+  display: none;
+  @media(min-width: 992px) {
+    body > img {
+      display: inline-block;
+      position: absolute;
+      width: 280px;
+      height: auto;
+      right: 0;
+      bottom: 0;
+    }
+  }
+}
+
+
+
+
+
 
 
